Bug 58946 - [journalctl] --until option not working
Summary: [journalctl] --until option not working
Status: RESOLVED FIXED
Alias: None
Product: systemd
Classification: Unclassified
Component: general (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: systemd-bugs
QA Contact: systemd-bugs
URL:
Whiteboard:
Keywords: patch
Depends on:
Blocks:
 
Reported: 2013-01-02 14:34 UTC by Benjamin Robin
Modified: 2013-02-24 14:30 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments
journalctl until option fix (1.66 KB, text/plain)
2013-01-02 14:34 UTC, Benjamin Robin
Details
journal until option fix (alternative) (1010 bytes, patch)
2013-02-24 14:21 UTC, Paul W. Frields
Details | Splinter Review

Description Benjamin Robin 2013-01-02 14:34:09 UTC
Created attachment 72384 [details]
journalctl until option fix

The until option of journalctl doesn't have any effect.

Attached patch to fix it
Comment 1 Paul W. Frields 2013-02-24 14:21:18 UTC
Created attachment 75447 [details] [review]
journal until option fix (alternative)

I'm not a great programmer, but I think the attachment here removes a useful check, which is that the arg for --since should be before the arg for --until. I made this patch instead and submit it here for the systemd guys to consider.
Comment 2 Zbigniew Jedrzejewski-Szmek 2013-02-24 14:30:01 UTC
Fixed in http://cgit.freedesktop.org/systemd/systemd/commit/?id=3ba09ee8.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.