journal: fix --until

https://bugs.freedesktop.org/show_bug.cgi?id=58946